--- a/packages/server/src/resources/i18n/en/translate.json
+++ b/packages/server/src/resources/i18n/en/translate.json
@@ -1,6 +1,7 @@
 {
   "server": {
     "started": "Server started on port {{port}}",
+    "wsStarted":  "Started Web Socket listener on port {{port}}",
     "exiting": "Server exiting...",
     "debug": {
       "route": {
