complete renaming of game-map to scene

--- a/packages/server/src/resources/i18n/en/translate.json
+++ b/packages/server/src/resources/i18n/en/translate.json
@@ -20,12 +20,12 @@
       "created": "New Campaign object created with id = {{id}}"
     }
   },
-  "gamemap": {
+  "scene": {
     "starter": {
-      "name": "New Map"
+      "name": "New Scene"
     },
     "debug": {
-      "created": "game map created with id = {{id}}"
+      "created": "Scene created with id = {{id}}"
     }
   }
 }
